--- a/mongo-app.yaml
+++ b/mongo-app.yaml
@@ -24,12 +24,12 @@ spec:
         - name: MONGO_INITDB_ROOT_USERNAME
           valueFrom:
             secretKeyRef:
-              name: secret
+              name: mongo-secret
               key: mong-user
         - name: MONGO_INITDB_ROOT_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: secret
+              name: mongo-secret
               key: mong-password
 
 ---
