--- a/web-app.yaml
+++ b/web-app.yaml
@@ -24,12 +24,12 @@ spec:
         - name: ME_CONFIG_MONGODB_ADMINUSERNAME
           valueFrom:
             secretKeyRef:
-              name: secret
+              name: mongo-secret
               key: mong-user
         - name: ME_CONFIG_MONGODB_ADMINPASSWORD
           valueFrom:
             secretKeyRef:
-              name: secret
+              name: mongo-secret
               key: mong-password
         - name: ME_CONFIG_MONGODB_ADMINPASSWORD
           valueFrom:
