--- a/mongo-app.yaml
+++ b/mongo-app.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mongo-deployment
+  namespace: webapp
 spec:
   selector:
     matchLabels:
@@ -37,6 +38,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mongo-service
+  namespace: webapp
 spec:
   selector:
     app: mongo
