--- a/secret.yml
+++ b/secret.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: mongo-secret
+  namespace: webapp
 type: Opaque
 stringData:
   mongo-user: bW9uZ291c2Vy
