--- a/web-app.yaml
+++ b/web-app.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: webapp-deployment
+  namespace: webapp
 spec:
   selector:
     matchLabels:
@@ -31,7 +32,7 @@ spec:
             secretKeyRef:
               name: mongo-secret
               key: mongo-password
-        - name: ME_CONFIG_MONGODB_ADMINPASSWORD
+        - name: ME_CONFIG_MONGODB_SERVER
           valueFrom:
             configMapKeyRef:
               name: mongo-config
@@ -42,6 +43,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: webapp-service
+  namespace: webapp
 spec:
   type: NodePort
   selector:
